test/negative/404_dup_pattern_ident.fx
// expect: duplicate identifier
val (a, a) = (1, 2)
println(a)
