test/negative/404_dup_pattern_ident.err
404_dup_pattern_ident.fx:2:9: error: duplicate identifier 'a' in the pattern
404_dup_pattern_ident.fx:3:9: error: the appropriate match for 'a' of type '<unknown>' is not found.

2 errors occured during type checking.
